change module name from "point" to "city"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(abstract_data_types C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(abstract_data_types lib/main.c lib/point.h lib/point.c lib/route.h lib/route.c lib/list.h lib/list.c)
+add_executable(abstract_data_types lib/main.c lib/city.h lib/city.c lib/route.h lib/route.c lib/list.h lib/list.c)
